# task_batch_integration

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  _viash.yaml  pyproject.toml
common/nextflow_helpers/: labels_tw.config
common/schemas/: task_metric.yaml
scripts/: render_report.sh
scripts/create_component/: create_python_metric.sh  create_r_method.sh
scripts/create_resources/: test_resources.sh
scripts/run_benchmark/: render_report_local.sh  run_full_local.sh  run_test_local.sh
src/api/: comp_method.yaml  file_common_dataset.yaml  file_integrated.yaml  file_integrated_processed.yaml  file_solution.yaml
src/control_methods/no_integration_batch/: script.py
src/data_processors/clustering/: config.vsh.yaml  script.py
src/data_processors/precompute_clustering_merge/: config.vsh.yaml  script.py
src/data_processors/precompute_clustering_run/: config.vsh.yaml  script.py
src/data_processors/process_dataset/: script.py
src/data_processors/process_integration/: config.vsh.yaml
src/datasets/loaders/: cellxgene_census.sh
src/methods/bbknn_ts/: config.vsh.yaml  script.py
src/methods/cellplm/: config.vsh.yaml  script.py
src/methods/combat-seq/: config.vsh.yaml  script.py
src/methods/condo/: config.vsh.yaml
src/methods/density_adaptive/: config.vsh.yaml  script.py
src/methods/drvi/: config.vsh.yaml  script.py
src/methods/fadvi/: config.vsh.yaml  script.py
src/methods/geneformer/: config.vsh.yaml  script.py
src/methods/geneformer_mlflow/: config.vsh.yaml  (+2 more)
src/utils/: get_embedding.py  mlflow.py  mlflow_docker_setup.yaml  unpack.py
(+68 files in other folders)
